# mp3-to-nbs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/mp3_to_nbs/: __init__.py  __main__.py  audio.py  cli.py  config.py  converter.py  instruments.py  nbs_writer.py
tests/: test_audio.py  test_config.py  test_converter.py  test_instruments.py
